deploy: ebc7b3c316156817e26d2feba2302f27c9621f54

--- a/search/index.html
+++ b/search/index.html
@@ -81,7 +81,15 @@ window.onload = wrap_img;
     <div class="js-search-results search-results-wrap"></div>
 </div>
 
-<!-- <div>
+<table>
+    <tr>
+        <td><img src="/RAYJ-final//images/logo.png" height="60"  title="APIs" alt=""></td>
+
+    </tr>
+</table>
+
+<!-- 
+<div>
     <img src="/RAYJ-final//images/billboard.png" height="500" width="1100"  title="APIs" alt="">
 </div> -->
       </div>
