deploy: f168d7e54bbd859c54c384576870d7fe7015a20d

--- a/search/index.html
+++ b/search/index.html
@@ -73,23 +73,15 @@ window.onload = wrap_img;
 <script type="text/javascript" src="/RAYJ-final/assets/js/search.js"></script>
 <script type="text/javascript" src="/RAYJ-final/assets/js/vendor/lunr.min.js"></script>
 
-<div class="search">
+<!-- <div class="search">
     <div class="search-input-wrap">
     <input type="text" class="js-search-input search-input input-block form-control" tabindex="0" placeholder="Search RAYJ Music" aria-label="Search RAYJ Music" autocomplete="off">
     </div>
     <br>
     <div class="js-search-results search-results-wrap"></div>
-</div>
+</div> -->
 
-<table>
-    <tr>
-        <td><img src="/RAYJ-final//images/logo.png" height="60"  title="APIs" alt=""></td>
-
-    </tr>
-</table>
-
-<!-- 
-<div>
+<!-- <div>
     <img src="/RAYJ-final//images/billboard.png" height="500" width="1100"  title="APIs" alt="">
 </div> -->
       </div>
