--- a/_pages/01_login.html
+++ b/_pages/01_login.html
@@ -33,7 +33,7 @@ week: 2
             text-align: center;
             font-size: 24px;
         }
-        container {
+        body {
             background:linear-gradient(#0e071b, #230a4d);
         }
         form {
