--- a/_pages/07_platforms.html
+++ b/_pages/07_platforms.html
@@ -6,7 +6,7 @@ title: Platforms
 
 <head>
     <meta charset="utf-8">
-    <title>Top Music Platforms for Streaming</title>
+    <title>Top Music Platforms</title>
 </head>
 
 <body>
