deploy: 7555a40abd6778b6e20e1b86e484c4ed6415a2a0

--- a/login.html
+++ b/login.html
@@ -96,7 +96,7 @@ window.onload = wrap_img;
             text-align: center;
             font-size: 24px;
         }
-        container {
+        body {
             background:linear-gradient(#0e071b, #230a4d);
         }
         form {
