--- a/_pages/00_quiz.html
+++ b/_pages/00_quiz.html
@@ -25,7 +25,7 @@ title: Quiz
   input[type="radio"] {
   width: 3em;
   height: 3rem;
-  accent-color: white;
+  accent-color: black;
   margin-bottom: 3rem;
   }
   </style>
