deploy: 40ef3dbfbb848e2088990dee4412849189353f00

--- a/login.html
+++ b/login.html
@@ -73,7 +73,6 @@ window.onload = wrap_img;
     <title>Login</title>
 </head>
     <th:block layout:fragment="body" th:remove="tag">
-    <container>
     <br> <h1 style="color:white;margin-top:3%">Welcome back! Login or make a new account to get started!</h1> <br> 
     <center>
         <form style="color: black">
@@ -89,7 +88,6 @@ window.onload = wrap_img;
             </div>
         </form>
     </center>  
-</container>
     </body>
         <style>
         h1 {
@@ -108,6 +106,12 @@ window.onload = wrap_img;
         }
         hr {
             width: 5%
+        }
+        .left {
+            float:left;
+        } 
+        .right {
+            float:right;
         }
         .divider {
             width:20%;
@@ -145,7 +149,7 @@ window.onload = wrap_img;
       </div>
     </div>
 
-    <div class="social-links"><ul class="social-media-list"><li><a rel="me" href="https://github.com/peacekeeper6" target="_blank" title="peacekeeper6"><svg class="svg-icon grey"><use xlink:href="/RAYJ-final/assets/minima-social-icons.svg#github"></use></svg></a></li></ul>
+    <div class="social-links"><ul class="social-media-list"><li><a rel="me" href="https://github.com/nighthawkcoders" target="_blank" title="nighthawkcoders"><svg class="svg-icon grey"><use xlink:href="/RAYJ-final/assets/minima-social-icons.svg#github"></use></svg></a></li><li><a rel="me" href="https://twitter.com/NighthawkCoding" target="_blank" title="NighthawkCoding"><svg class="svg-icon grey"><use xlink:href="/RAYJ-final/assets/minima-social-icons.svg#twitter"></use></svg></a></li><li><a rel="me" href="https://www.youtube.com/channel/UClIKOsDS5dsfzFA3zveDT3Q" target="_blank" title="YouTube"><svg class="svg-icon grey"><use xlink:href="/RAYJ-final/assets/minima-social-icons.svg#youtube"></use></svg></a></li></ul>
 </div>
 
   </div>
