--- a/login.html
+++ b/login.html
@@ -73,6 +73,7 @@ window.onload = wrap_img;
     <title>Login</title>
 </head>
     <th:block layout:fragment="body" th:remove="tag">
+    <container>
     <br> <h1 style="color:white;margin-top:3%">Welcome back! Login or make a new account to get started!</h1> <br> 
     <center>
         <form style="color: black">
@@ -88,13 +89,14 @@ window.onload = wrap_img;
             </div>
         </form>
     </center>  
+</container>
     </body>
         <style>
         h1 {
             text-align: center;
             font-size: 24px;
         }
-        body {
+        container {
             background:linear-gradient(#0e071b, #230a4d);
         }
         form {
@@ -106,12 +108,6 @@ window.onload = wrap_img;
         }
         hr {
             width: 5%
-        }
-        .left {
-            float:left;
-        } 
-        .right {
-            float:right;
         }
         .divider {
             width:20%;
