deploy: 4a96aec5a46d081b4b15b0051e42a5d0fbcb9d2b

--- a/quiz.html
+++ b/quiz.html
@@ -98,7 +98,7 @@ window.onload = wrap_img;
   input[type="radio"] {
   width: 3em;
   height: 3rem;
-  accent-color: black;
+  accent-color: white;
   margin-bottom: 3rem;
   }
   </style>
