--- a/quiz.html
+++ b/quiz.html
@@ -447,7 +447,7 @@ result.addEventListener('click',restartQuiz);
       </div>
     </div>
 
-    <div class="social-links"><ul class="social-media-list"><li><a rel="me" href="https://github.com/peacekeeper6" target="_blank" title="peacekeeper6"><svg class="svg-icon grey"><use xlink:href="/RAYJ-final/assets/minima-social-icons.svg#github"></use></svg></a></li><li><a rel="me" href="https://twitter.com/NighthawkCoding" target="_blank" title="NighthawkCoding"><svg class="svg-icon grey"><use xlink:href="/RAYJ-final/assets/minima-social-icons.svg#twitter"></use></svg></a></li><li><a rel="me" href="https://www.youtube.com/channel/UClIKOsDS5dsfzFA3zveDT3Q" target="_blank" title="YouTube"><svg class="svg-icon grey"><use xlink:href="/RAYJ-final/assets/minima-social-icons.svg#youtube"></use></svg></a></li></ul>
+    <div class="social-links"><ul class="social-media-list"><li><a rel="me" href="https://github.com/peacekeeper6" target="_blank" title="peacekeeper6"><svg class="svg-icon grey"><use xlink:href="/RAYJ-final/assets/minima-social-icons.svg#github"></use></svg></a></li></ul>
 </div>
 
   </div>
