--- a/_pages/07_platforms.html
+++ b/_pages/07_platforms.html
@@ -17,9 +17,9 @@ title: Platforms
         <br>
         <br>
         <div class="row">
-            <div class="col-4">
+            <div>
                 <div class="card">
-                    <img src="{{site.baseurl}}//images/Spotify.jpeg" height="150" width="900"  alt="">
+                    <img src="{{site.baseurl}}//images/Spotify.jpeg" height="1000" width="800"  alt="">
                     <div class="card-body">
                     <h5 class="card-title">Spotify</h5>
                     <p class="card-text">
@@ -38,7 +38,7 @@ title: Platforms
 
             <div>
                 <div class="card">
-                    <img src="{{site.baseurl}}//images/apple-music.jpeg" height="150" width="800" alt="">
+                    <img src="{{site.baseurl}}//images/apple-music.jpeg" height="1000" width="800" alt="">
                     <div class="card-body">
                     <h5 class="card-title">Apple Music</h5>
                     <p class="card-text">
@@ -57,7 +57,7 @@ title: Platforms
 
             <div>
                 <div class="card">
-                    <img src="{{site.baseurl}}//images/youtube-music.jpeg" height="150" width="800"  alt="">
+                    <img src="{{site.baseurl}}//images/youtube-music.jpeg" height="1000" width="800"  alt="">
                     <div class="card-body">
                     <h5 class="card-title">YouTube Music</h5>
                     <p class="card-text">
