deploy: 0674e4ae4442cb9cff23d4b0deb0bbc15cfd6d4c

--- a/platforms/index.html
+++ b/platforms/index.html
@@ -89,9 +89,9 @@ window.onload = wrap_img;
         <br>
         <br>
         <div class="row">
-            <div class="col-4">
+            <div>
                 <div class="card">
-                    <img src="/RAYJ-final//images/Spotify.jpeg" height="150" width="900"  alt="">
+                    <img src="/RAYJ-final//images/Spotify.jpeg" height="1000" width="800"  alt="">
                     <div class="card-body">
                     <h5 class="card-title">Spotify</h5>
                     <p class="card-text">
@@ -110,7 +110,7 @@ window.onload = wrap_img;
 
             <div>
                 <div class="card">
-                    <img src="/RAYJ-final//images/apple-music.jpeg" height="150" width="800" alt="">
+                    <img src="/RAYJ-final//images/apple-music.jpeg" height="1000" width="800" alt="">
                     <div class="card-body">
                     <h5 class="card-title">Apple Music</h5>
                     <p class="card-text">
@@ -129,7 +129,7 @@ window.onload = wrap_img;
 
             <div>
                 <div class="card">
-                    <img src="/RAYJ-final//images/youtube-music.jpeg" height="150" width="800"  alt="">
+                    <img src="/RAYJ-final//images/youtube-music.jpeg" height="1000" width="800"  alt="">
                     <div class="card-body">
                     <h5 class="card-title">YouTube Music</h5>
                     <p class="card-text">
