deploy: 80db2b88dc0939fc80fc8a57076e32a260761f89

--- a/_pages/randomsong.html
+++ b/_pages/randomsong.html
@@ -10,8 +10,8 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="RAYJ Music" />
 <meta property="og:description" content="RAYJ Music" />
-<link rel="canonical" href="https://nighthawkcoders.github.io/RAYJ-final/randomsong" />
-<meta property="og:url" content="https://nighthawkcoders.github.io/RAYJ-final/randomsong" />
+<link rel="canonical" href="https://nighthawkcoders.github.io/RAYJ-final/_pages/randomsong.html" />
+<meta property="og:url" content="https://nighthawkcoders.github.io/RAYJ-final/_pages/randomsong.html" />
 <meta property="og:site_name" content="RAYJ Music" />
 <meta property="og:image" content="https://nighthawkcoders.github.io/RAYJ-final/images/logo.png" />
 <meta property="og:type" content="website" />
@@ -19,7 +19,7 @@
 <meta property="twitter:image" content="https://nighthawkcoders.github.io/RAYJ-final/images/logo.png" />
 <meta property="twitter:title" content="RAYJ Music" />
 <script type="application/ld+json">
-{"@context":"https://schema.org","@type":"WebPage","description":"RAYJ Music","headline":"RAYJ Music","image":"https://nighthawkcoders.github.io/RAYJ-final/images/logo.png","url":"https://nighthawkcoders.github.io/RAYJ-final/randomsong"}</script>
+{"@context":"https://schema.org","@type":"WebPage","description":"RAYJ Music","headline":"RAYJ Music","image":"https://nighthawkcoders.github.io/RAYJ-final/images/logo.png","url":"https://nighthawkcoders.github.io/RAYJ-final/_pages/randomsong.html"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/RAYJ-final/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://nighthawkcoders.github.io/RAYJ-final/feed.xml" title="RAYJ Music" /><link rel="shortcut icon" type="image/x-icon" href="/RAYJ-final/images/favicon.ico"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Primer/15.2.0/primer.css" integrity="sha512-xTz2ys4coGAOz8vuV1NcQBkgVmKhsSEtjbqyMJbBHRplFuvKIUo6xhLHpAyPt9mfR6twHJgn9OgVLuqOvjeBhg==" crossorigin="anonymous" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
@@ -71,8 +71,8 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><center><h3>Bored of all your songs?</h3><center>
-<h5>Look no further!<h5>
+        <div class="home"><center><h3>Bored of all your songs??</h3><center>
+
 
   <div>
     <hr />
@@ -130,8 +130,14 @@ window.onload = wrap_img;
                     response.json().then(data => {
                         console.log(data);
                         // Country data
-                        var random = Math.floor(Math.random() * 100);
-                        document.getElementById("recommended").innerHTML = data.tracks[random].share.subject
+                        for (let i = 0; i < 5; i++) {
+                          let random = Math.floor(Math.random() * 100);
+                          console.log(data.tracks)
+                          console.log(data.tracks[random])
+                          console.log(data.tracks[random].share)
+                          console.log(data.tracks[random].share.subject)
+                          // document.getElementById("recommended").innerHTML = data.tracks[random].share.subject
+                      }
                     })
                 })
                 // catch fetch errors (ie ACCESS to server blocked)
@@ -151,7 +157,7 @@ window.onload = wrap_img;
 
 
 
-</body></p></div></h5></h5></center></center>
+</body></p></div></center></center>
 
 
 
