--- a/_pages/randomsong.html
+++ b/_pages/randomsong.html
@@ -1,11 +1,13 @@
 ---
 layout: home
 search_exclude: true
+permalink: /randomsong
 image: images/logo.png
 ---
 
 
 <center><h3>Bored of all your songs??</h3><center>
+<h5>Look no further!</h5>
 
 
   <div>
