--- a/randomsong.html
+++ b/randomsong.html
@@ -110,6 +110,8 @@ window.onload = wrap_img;
                 },
                 };
                 function randomSong(data, songID) {
+                  console.log(data)
+                  console.log(songID)
                   let random = Math.floor(Math.random() * 20);
                   document.getElementById(songID).innerHTML = data.tracks.at(random).share.subject;
                 }
@@ -139,7 +141,7 @@ window.onload = wrap_img;
                           // td for joke cell
                           const song = document.createElement("td");
                             song.id = "song"+i;
-                            song.innerHTML = randomSong();  // add fetched data to innerHTML
+                            song.innerHTML = randomSong(data, song.id);  // add fetched data to innerHTML
               
                           // td for like cell with onclick actions
                           const generate = document.createElement("td");
