--- a/_pages/randomsong.html
+++ b/_pages/randomsong.html
@@ -47,11 +47,11 @@ image: images/logo.png
                 function randomSong(data, songID) {
                   console.log(songID)
                   let random = Math.floor(Math.random() * 20);
-                  console.log(data)
-                  console.log(data.tracks)
+                  // console.log(data)
+                  // console.log(data.tracks)
                   console.log(random)
-                  console.log(data.tracks.at(random))
-                  console.log(data.tracks.at(random).share)
+                  // console.log(data.tracks.at(random))
+                  // console.log(data.tracks.at(random).share)
                   console.log(data.tracks.at(random).share.subject)
                   document.getElementById(songID).innerHTML = data.tracks.at(random).share.subject;
                 }
@@ -81,7 +81,8 @@ image: images/logo.png
                           // td for joke cell
                           const song = document.createElement("td");
                             song.id = "song"+i;
-                            song.innerHTML = randomSong(data, song.id);  // add fetched data to innerHTML
+                            let random = Math.floor(Math.random() * 20);
+                            song.innerHTML = data.tracks.at(random).share.subject;  // add fetched data to innerHTML
               
                           // td for like cell with onclick actions
                           const generate = document.createElement("td");
