--- a/randomsong.html
+++ b/randomsong.html
@@ -112,11 +112,11 @@ window.onload = wrap_img;
                 function randomSong(data, songID) {
                   console.log(songID)
                   let random = Math.floor(Math.random() * 20);
-                  console.log(data)
-                  console.log(data.tracks)
+                  // console.log(data)
+                  // console.log(data.tracks)
                   console.log(random)
-                  console.log(data.tracks.at(random))
-                  console.log(data.tracks.at(random).share)
+                  // console.log(data.tracks.at(random))
+                  // console.log(data.tracks.at(random).share)
                   console.log(data.tracks.at(random).share.subject)
                   document.getElementById(songID).innerHTML = data.tracks.at(random).share.subject;
                 }
@@ -146,7 +146,8 @@ window.onload = wrap_img;
                           // td for joke cell
                           const song = document.createElement("td");
                             song.id = "song"+i;
-                            song.innerHTML = randomSong(data, song.id);  // add fetched data to innerHTML
+                            let random = Math.floor(Math.random() * 20);
+                            song.innerHTML = data.tracks.at(random).share.subject;  // add fetched data to innerHTML
               
                           // td for like cell with onclick actions
                           const generate = document.createElement("td");
