--- a/_pages/randomsong.html
+++ b/_pages/randomsong.html
@@ -14,7 +14,8 @@ image: images/logo.png
     <hr>
     <p>
         <body>
-            <table>
+            <center>
+              <table>
                 <thead>
                 <tr>
                   <th>Song</th>
@@ -25,6 +26,7 @@ image: images/logo.png
                   <!-- generated rows -->
                 </tbody>
               </table>
+              </center>
               
               <!-- Script is layed out in a sequence (no function) and will execute when page is loaded -->
               <script>
