deploy: 745196306b80451ddb9e04703add41c9593c7bf5

--- a/randomsong.html
+++ b/randomsong.html
@@ -79,7 +79,8 @@ window.onload = wrap_img;
     <hr />
     <p>
         <body>
-            <table>
+            <center>
+              <table>
                 <thead>
                 <tr>
                   <th>Song</th>
@@ -90,6 +91,7 @@ window.onload = wrap_img;
                   <!-- generated rows -->
                 </tbody>
               </table>
+              </center>
               
               <!-- Script is layed out in a sequence (no function) and will execute when page is loaded -->
               <script>
