--- a/songfeedback.html
+++ b/songfeedback.html
@@ -253,8 +253,8 @@ window.onload = wrap_img;
             console.log(data);
             for (let i = 1; i <= count; i++) {
               // Likes or Jeers updated/incremented
-              document.getElementById("dislike"+i).innerHTML = data.likes;  // fetched like data assigned to like Document Object Model (DOM)
-              document.getElementById("like"+i).innerHTML = data.dislikes;  // fetched dislike data assigned to dislike Document Object Model (DOM)
+              document.getElementById("like"+i).innerHTML = data.at(i-1).likes;  // fetched like data assigned to like Document Object Model (DOM)
+              document.getElementById("dislike"+i).innerHTML = data.at(i-1).dislikes;  // fetched dislike data assigned to dislike Document Object Model (DOM)
             }
         })
       })
